<resources>
    <string name="app_name">RNCloud</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_cnf_password">Confirm Password</string>
    <string name="action_next">Next</string>
    <string name="title_activity_main_bottom_navigation_drawer">Main</string>
    <string name="title_home">Schedule</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_profile">Profile</string>
    <string name="test">Test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_sign_up_form">Create an Account</string>
    <string name="prompt_mobile_no">Mobile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="my_preferences">My Preferences</string>
    <string name="skill_assessment">Skill Assesment</string>
    <string name="my_registries">My Registries</string>
    <string name="title_activity_my_preferences">MyPreferencesActivity</string>


    <string name="valid_from_to"> %1$s - %1$s</string>
    <string name="is_current_empployee">Still Working : Yes</string>
    <string name="is_not_current_empployee">Still Working : No</string>
    <string name="may_contact_yes">May Contact : Yes</string>
    <string name="may_contact_no">May Contact : No</string>
    <string name="title_activity_add_licence">Add Licence</string>
    <string name="title_activity_edit_licence">Edit Licence</string>
    <string name="prompt_licence_type">Licence Type*</string>
    <string name="prompt_licence_no">Licence Number</string>
    <string name="prompt_valid_from">Valid From</string>
    <string name="prompt_valid_to">Valid To</string>
    <string name="prompt_licencing_state">Licencing State</string>
    <string name="prompt_licence_additional_dtls">Additional Details</string>
    <string name="prompt_licence_remarks">Remarks</string>
    <string name="action_submit">Submit</string>

    <!--    <string name="schedule_shift_type_night">%1$s ( %2$s %3$s)</string>-->
    <string name="schedule_shift_type_night">%1$s</string>
    <string name="sch_compensation">$%1$s</string>
    <string name="title_activity_add_edit_certification">Add Certification</string>
    <string name="prompt_certification_type">Certificate Type*</string>
    <string name="prompt_issue_date">Issue Date</string>
    <string name="prompt_expiry_date">Expiring Date</string>
    <string name="prompt_certification_no">Certificate Number</string>
    <string name="prompt_issuing_authority">Issuing Authority</string>
    <string name="title_activity_edit_cert">Edit Certification</string>
    <string name="title_activity_add_cert">Add Certification</string>
    <string name="title_delete">Delete</string>
</resources>
