<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_sign_up_form"
        android:layout_margin="10dp"
        tools:context=".view.activity.SignUpFormActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:hintEnabled="false"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_firstname"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/prompt_lastname"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout"
            app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/prompt_mobile_no"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLayout"
            app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/prompt_email"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/mobileLayout"
            app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/prompt_password"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cnfPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/prompt_cnf_password"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            app:layout_constraintVertical_bias="0.00999999">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cnf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/LoginButton"
            android:text="@string/action_next"
            app:layout_constraintTop_toBottomOf="@+id/cnfPasswordLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.00999999"
            android:layout_marginTop="20dp"
            />

</androidx.constraintlayout.widget.ConstraintLayout>