<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activity.SignUpActivity">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname_appbarlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/prompt_firstname"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00999999">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname_appbarlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/prompt_lastname"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/firstname_appbarlayout"
                app:layout_constraintVertical_bias="0.00999999">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_appbarlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/prompt_email"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/lastname_appbarlayout"
                app:layout_constraintVertical_bias="0.00999999">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_appbarlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/prompt_password"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/email_appbarlayout"
                app:layout_constraintVertical_bias="0.00999999"
                app:passwordToggleEnabled="true"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cnf_password_appbarlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/prompt_cnf_password"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/password_appbarlayout"
                app:layout_constraintVertical_bias="0.00999999"
                app:passwordToggleEnabled="true"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cnf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"

                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_next"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@+id/cnf_password_appbarlayout"

                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

